# ag2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PR_SANDBOX_CODE_TOOL.md  README.md  _typos.toml  justfile  play.py  pyproject.toml  setup_autogen.py  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  zizmor.yml
.github/workflows/: beta-llm-test.yml  beta-test.yml  build-mkdocs.yml  claude-code-review.yml  cli-package.yml  pr-checks.yml  python-package.yml  test-with-optional-deps.yml
0.11.2/: sitemap.xml
0.11.5/: objects.inv  sitemap.xml
0.12.0/: objects.inv  sitemap.xml
0.12.1/: objects.inv  sitemap.xml
0.12.2/: objects.inv  sitemap.xml
a2ui-sample/ag2_sample/: a2ui-sample.py
a2ui-sample/agent/: __init__.py  __main__.py  agent.py  agent_executor.py  restaurant_data.json  tools.py
a2ui-sample/lit-client/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
autogen/: browser_utils.py  code_utils.py  import_utils.py  token_count_utils.py  version.py
autogen/a2a/: client.py  constants.py  server.py  utils.py
cli/: pyproject.toml
examples/: middleware_builtin_demo.py  middleware_demo.py
latest/: 404.html  index.html  objects.inv
notebook/: agentchat_JSON_mode_example.ipynb  agentchat_agenteval_cq_math.ipynb  agentchat_agentoptimizer.ipynb  agentchat_autobuild_agent_library.ipynb  tools_veronica_circuit_breaker.ipynb
scripts/: pre-commit-license-check.py  test-core-llm.sh  test-skip-llm.sh
test/: test_import.py  test_logger_redaction.py
website/: blogs_and_user_stories_authors.yml  mint-json-template.json.jinja
(+6183 files in other folders)
