[project]
name = "ag2-cli"
version = "0.1.0"
description = "AG2 CLI — build, run, test, and deploy multi-agent applications"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
keywords = ["ai", "agent", "ag2", "cli", "multi-agent", "agentic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
ag2 = "ag2_cli.app:app"

[project.urls]
Homepage = "https://ag2.ai/"
Documentation = "https://docs.ag2.ai"
Source = "https://github.com/ag2ai/ag2/tree/main/cli"
Tracker = "https://github.com/ag2ai/ag2/issues"
Discord = "https://discord.gg/pAbnFJrkgZ"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ag2_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
